# RPO_2024

app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/ru/iu3/fclient/: MainActivity.java  PinpadActivity.java
app/src/main/res/layout/: activity_pinpad.xml
backend/: pom.xml
backend/src/main/java/ru/iu3/backend/auth/: AuthenticationFilter.java  AuthenticationProvider.java
backend/src/main/java/ru/iu3/backend/controllers/: ArtistController.java  CountyController.java  MuseumsController.java  UsersController.java
backend/src/main/java/ru/iu3/backend/model/: Painting.java
backend/src/main/java/ru/iu3/backend/repository/: ArtistRepository.java  CountyRepository.java  MuseumRepository.java  PaintingRepository.java  UserRepository.java
backend/src/main/resources/: application.properties
gradle/wrapper/: gradle-wrapper.properties
